[gd_scene load_steps=9 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/Player.tscn" id="2"]
[ext_resource type="Theme" path="res://assets/ui_theme.tres" id="3"]

[sub_resource type="RectangleShape2D" id="1"]

[sub_resource type="Gradient" id="2"]
colors = PackedColorArray(0.5, 0.5, 0.5, 1, 0.8, 0.8, 0.8, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Player" parent="." instance=ExtResource("2")]
position = Vector2(400, 500)

[node name="GameTimer" type="Timer" parent="."]
wait_time = 1.0
autostart = true

[node name="ObstacleTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size = Vector2(40, 35)
theme = ExtResource("3")

[node name="ScoreLabel" type="Label" parent="CanvasLayer/UI"]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 50.0
text = "Score: 0"
theme_override_font_sizes/font_size = 20

[node name="ColorIndicator" type="Label" parent="CanvasLayer/UI"]
layout_mode = 1
offset_left = 200.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 50.0
text = "Color: ðŸ”´"
theme_override_font_sizes/font_size = 16

[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]